<resources>
    <string name="app_name">Eye Soccer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>

    <string name="title_news">Eye News</string>
    <string name="title_video">Eye Tube</string>
    <string name="title_home">Home</string>
    <string name="title_wallet">Eye Wallet</string>

    <string name="dummy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="dummy_content_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="dummy_title">Officia deserunt mollit anim id est laborum.</string>
    <string name="related_news">Related News</string>
    <string name="related_video">Related Video</string>
    <string name="perangkat_pertandingan">Perangkat Pertandingan</string>

    <string name="home_title_news">Eyenews</string>
    <string name="home_title_video">Eyetube</string>
    <string name="home_title_wallet">Eyewallet</string>
    <string name="home_title_home">Home</string>
    <string name="klub">Klub</string>
    <string name="event">Event</string>
</resources>
