<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_esnews_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ferhatproduction.eyesoccer.Activity.ESNewsDetail"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/header_small"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/Theme.AppCompat">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"/>
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:id="@+id/btnBackActionBar"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_video"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"/>

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/button_share2x"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:tint="@color/white"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/space_medium"
        android:id="@+id/relatedInfo"
        android:layout_below="@+id/content">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black_overlay"
            android:layout_marginBottom="@dimen/space_medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/related_video"
            android:layout_marginBottom="@dimen/space_medium"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listRelatedVideo"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/content"
        android:layout_below="@+id/frameVideo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="#ccc"
                android:id="@+id/img"
                android:visibility="gone"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/space_medium">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tTitle"
                    android:textStyle="bold"
                    android:text="@string/dummy_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tTime"
                    android:text="30 menit yang lalu"
                    android:textColor="@color/black_overlay"
                    android:textSize="@dimen/item_font_size_mini"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="#000"
        android:id="@+id/frameVideo"
        android:layout_below="@+id/appBarLayout">
        <VideoView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/video"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</RelativeLayout>
