<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarMain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/header_small"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.AppCompat"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp">
                    <ImageButton
                        android:id="@+id/btnProfile"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_profile"
                        android:background="@android:color/transparent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"
                        android:id="@+id/mainTitle"/>

                    <ImageButton
                        android:id="@+id/btnSearch"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_search"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@android:color/transparent"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.ferhatproduction.eyesoccer.Class.FixViewPager
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/viewpager"/>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabMode="fixed"
                    app:tabGravity="fill"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="#ececec">
                    <LinearLayout
                        android:id="@+id/tab1Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:id="@+id/tabIconHome"
                            android:src="@drawable/icon_home"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_title_home"
                            android:id="@+id/tabIconHomeLabel"
                            android:textSize="@dimen/item_font_size_mini"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tab2Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:id="@+id/tabIconVideo"
                            android:src="@drawable/icon_eyewatch"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_title_video"
                            android:id="@+id/tabIconVideoLabel"
                            android:textSize="@dimen/item_font_size_mini"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/fabx"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:background="@drawable/shape_circle">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/icon_radial"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tab4Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/icon_eyenews"
                            android:id="@+id/tabIconNews"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_title_news"
                            android:id="@+id/tabIconNewsLabel"
                            android:textSize="@dimen/item_font_size_mini"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/tab5Button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/icon_eyewallet"
                            android:id="@+id/tabIconWallet"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_title_wallet"
                            android:id="@+id/tabIconWalletLabel"
                            android:textSize="@dimen/item_font_size_mini"/>
                    </LinearLayout>

                </LinearLayout>

                <!--<TableLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="45dp"-->
                <!--android:stretchColumns="0,1,2,3,4,5"-->
                <!--android:background="#ececec"-->
                <!--android:visibility="visible">-->
                <!--<TableRow>-->
                <!--<LinearLayout-->
                <!--android:id="@+id/tab1Button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="@dimen/padding_top_home_tab">-->
                <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:id="@+id/tabIconHome"-->
                <!--android:src="@drawable/icon_home"/>-->
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/home_title_home"-->
                <!--android:id="@+id/tabIconHomeLabel"-->
                <!--android:textSize="@dimen/item_font_size_mini"/>-->
                <!--</LinearLayout>-->
                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:id="@+id/tab2Button"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="@dimen/padding_top_home_tab">-->
                <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:id="@+id/tabIconVideo"-->
                <!--android:src="@drawable/icon_eyewatch"/>-->
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/home_title_video"-->
                <!--android:id="@+id/tabIconVideoLabel"-->
                <!--android:textSize="@dimen/item_font_size_mini"/>-->
                <!--</LinearLayout>-->
                <!--<LinearLayout-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="45dp"-->
                <!--android:id="@+id/fab_dummy"-->
                <!--android:gravity="center"-->
                <!--android:background="@drawable/shape_circle"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:layout_marginTop="0dp"-->
                <!--android:visibility="invisible">-->
                <!--<ImageView-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:src="@drawable/icon_radial"-->
                <!--/>-->

                <!--</LinearLayout>-->
                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:id="@+id/tab4Button"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="@dimen/padding_top_home_tab">-->
                <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:src="@drawable/icon_eyenews"-->
                <!--android:id="@+id/tabIconNews"/>-->
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/home_title_news"-->
                <!--android:id="@+id/tabIconNewsLabel"-->
                <!--android:textSize="@dimen/item_font_size_mini"/>-->
                <!--</LinearLayout>-->
                <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:id="@+id/tab5Button"-->
                <!--android:gravity="center"-->
                <!--android:layout_marginTop="@dimen/padding_top_home_tab">-->
                <!--<ImageView-->
                <!--android:layout_width="20dp"-->
                <!--android:layout_height="20dp"-->
                <!--android:src="@drawable/icon_eyewallet"-->
                <!--android:id="@+id/tabIconWallet"/>-->
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/home_title_wallet"-->
                <!--android:id="@+id/tabIconWalletLabel"-->
                <!--android:textSize="@dimen/item_font_size_mini"/>-->
                <!--</LinearLayout>-->

                <!--</TableRow>-->
                <!--</TableLayout>-->
            </LinearLayout>

            <!-- Arc Layout -->
            <FrameLayout
                android:id="@+id/menu_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:visibility="invisible"
                >
                <com.ogaclejapan.arclayout.ArcLayout
                    android:id="@+id/arc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="42dp"
                    app:arc_axisRadius="54dp"
                    app:arc_freeAngle="true"
                    app:arc_origin="bottom"
                    app:arc_radius="140dp"
                    android:background="@android:color/transparent"
                    >

                    <LinearLayout
                        style="@style/Item.Path"
                        app:arc_angle="30"
                        android:id="@+id/radialKlub">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_klub" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Item.Path"
                        app:arc_angle="90"
                        android:id="@+id/radialSupporter">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_suporter" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/Item.Path"
                        app:arc_angle="150"
                        android:id="@+id/radialWasit">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/icon_perangkatpertandingan" />
                    </LinearLayout>

                </com.ogaclejapan.arclayout.ArcLayout>
            </FrameLayout>
            <!-- Arc Layout -->

            <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/fab"
            android:gravity="center"
            android:background="@drawable/shape_circle"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
                <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_radial"/>

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
